# agent-foundation

./: .gitignore  AGENTS.md  Makefile  NORMATIVE_FILES.md  README.md  conftest.py  pyproject.toml
agents/: README.md  implementer.md  maintenance.md  qa-eval.md  review.md
apps/: __init__.py
design-pack-v6/: ADR_COMPONENT_SELECTION.md  AI_MAINTENANCE_MODEL.md  ARCHITECTURE.md  CODEX_HANDOFF.md  CODEX_MASTER_PROMPT.md  CODEX_NEXT_WAVE.md  DIRECTORY_LAYOUT.md  IMPLEMENTATION_ORDER.md  OPENCLAW_ADAPTER_SCOPE.md  PHASE1_SCHEMA_NOTES.md  PHASE2_5_COMPONENT_MATRIX.md  README.md  ROADMAP_PHASE2_5_TO_PHASE4.md  TASK_BREAKDOWN.md  TESTING_STACK.md  TEST_MATRIX_PHASE2_5.md  TODO_MASTER.md  WRITEBACK_RULES.md  package-plugin-phase1.json  pyproject.toml  requirements-phase1.txt
design-pack-v6/ADR/: ADR-002-memory-mem0.md  ADR-003-artifact-store-filesystem.md  ADR-005-api-fastapi-pydantic.md  ADR-006-deferred-phase2-stack.md
design-pack-v6/api/: artifact_api.yaml  thin_kb_api.yaml
design-pack-v6/docs/: COMPONENT_SELECTION_NOTES.md
design-pack-v6/examples/: task-example.json
design-pack-v6/openapi/: thin_kb_api.yaml
design-pack-v6/openclaw/: mem0_integration.md
design-pack-v6/schemas/: artifacts.py  thin_kb.py
design-pack-v7/: AGENT_README.md  API_CONTRACTS.md  BOUNDARIES.md  CODEX_OPTIMIZATION_HANDOFF.md  COMPONENT_MATRIX.md  DEPENDENCIES.md  EXECUTION_PLAN.md  IMPLEMENTATION_TASKS.md  OPENCLAW_INTEGRATION.md  ORTHOGONAL_TEST_MATRIX.md  PHASE_PLAN.md  PLAN_V7.md  README.md  REPO_OPTIMIZATION_V7.md  REVIEW_FINDINGS_V7.md  RISKS_AND_DECISIONS.md  STATE_MACHINE.md  TEST_STRATEGY.md  TODO_V7.md  pyproject-phase1.toml  requirements-phase2.txt
design-pack-v8/: AGENT_SYSTEM_README_V2.md  CODEX_V8_HANDOFF.md  PLAN_V8.md  README.md  REPO_SHAPE_V8.md  REVIEW_V8.md  TEST_EXPANSION_V8.md  (+1 more)
(+145 files in other folders)
