[project]
name = "agent-foundation"
version = "0.1.0"
description = "Memory + artifact + thin-KB foundation for OpenClaw-based engineering workflows"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi==0.135.1",
  "uvicorn==0.41.0",
  "pydantic==2.12.5",
  "pydantic-settings==2.13.1",
  "sqlmodel==0.0.37",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "httpx>=0.28,<0.29",
  "ruff>=0.12,<0.13",
]
phase2 = [
  "docling==2.77.0",
  "tree-sitter==0.25.2",
  "tree-sitter-python==0.25.0",
  "lancedb==0.29.2",
  "dagster==1.12.18",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"
